[metadata]
name = BlaApi
version = 1.0
author = Dead Dog
author_email = Deaddogfuneral.gmail.com
description = An unofficial wrapper for the beacon light api. 
long_description = file: LICENSE
long_description_content_type = text/markdown
url = https://github.com/Omer-Farooqui/BLA-Api-Wrapper
project_urls =
    Bug Tracker = https://github.com/Omer-Farooqui/BLA-Api-Wrapper/issues
    repository = https://github.com/Omer-Farooqui/BLA-Api-Wrapper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = BlaApi
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src